--- a/index.html
+++ b/index.html
@@ -15,19 +15,18 @@
     <section class="content">
       <nav>
         <ul>
-          <li><img src="images/home.svg" alt="Home" /> Home</li>
+          <li><img src="./images/home.svg" alt="Home" /> Home</li>
           <li>
-            <img src="images/notification.svg" alt="Notications" />
+            <img src="./images/notification.svg" alt="Notications" />
             Notifications
           </li>
-          <li><img src="images/message.svg" alt="Messages" /> Messages</li>
+          <li><img src="./images/message.svg" alt="Messages" /> Messages</li>
         </ul>
       </nav>
-      <img src="images/twitter.svg" alt="Logo Twitter" />
+      <img src="./images/twitter.svg" alt="Logo Twitter" />
       <div class="side">
         <input placeholder="Search on Twitter" type="text" />
-        <img src="images/avatar.png" alt="Avatar" />
-        <button>Tweet</button>
+        <img src="./images/avatar.png" alt="Avatar" />
       </div>
     </section>
   </header>
@@ -42,7 +41,7 @@
         </li>
         <li>
           <span>Followings</span>
-          <strong>350</strong>
+          <strong id="followingNumber">350</strong>
         </li>
         <li>
           <span>Followers</span>
@@ -55,13 +54,13 @@
       </ul>
       <div class="actions">
         <button onclick="goFollow()">Follow</button>
-        <img src="images/more.svg" alt="More" />
+        <img src="./images/more.svg" alt="More" />
       </div>
     </section>
   </nav>
   <section class="wrapper-content content">
     <aside class="profile">
-      <img src="./images/avatar.png" alt="Avatar" class="avatar" />
+      <img src="images/avatar.png" alt="Avatar" class="avatar" />
       <h1>Javascript web</h1>
       <span>@javascriptWeb</span>
       <p>
@@ -69,27 +68,35 @@
         ullamcorper odio.
       </p>
       <ul class="info-list">
-        <li><img src="images/place.svg" alt="Place" />Cidade, País</li>
-        <li><img src="images/link.svg" alt="Place" />site.com</li>
-        <li><img src="images/clock.svg" alt="Place" />Apbril, 24</li>
-        <li><img src="images/baby.svg" alt="Place" />Data de nascimento</li>
+        <li><img src="./images/place.svg" alt="Place" />Cidade, País</li>
+        <li><img src="./images/link.svg" alt="Place" />site.com</li>
+        <li><img src="./images/clock.svg" alt="Place" />Apbril, 24</li>
+        <li><img src="./images/baby.svg" alt="Place" />Data de nascimento</li>
       </ul>
       <div class="widget followers">
-        <strong><img src="images/user.svg" alt="Followers" /> 73 followers that you know</strong>
+        <strong><img src="./images/user.svg" alt="Followers" /> 73 followers that you know</strong>
       </div>
       <div class="widget images">
-        <strong><img src="images/image.svg" alt="Images" /> 266 Photos and videos</strong>
+        <strong><img src="./images/image.svg" alt="Images" /> 266 Photos and videos</strong>
       </div>
     </aside>
     <section class="timeline">
+      <ul class="tweets">
+        <li>
+          <div id="createTweet">
+            <textarea id="myTweet"></textarea>
+            <button onclick="goTweet()">Tweet</button>
+          </div>
+        </li>
+      </ul>
       <nav>
         <a href="" class="active">Tweets</a>
         <a href="">Tweets and Replace</a>
         <a href="">medias</a>
       </nav>
       <ul class="tweets">
-        <li>
-          <img src="images/avatar.png" alt="Avatar" />
+        <li class="tweetItem">
+          <img src="./images/avatar.png" alt="Avatar" />
           <div class="info">
             <strong>
               Javascript web
@@ -101,14 +108,21 @@
               text ever since the 1500
             </p>
             <div class="actions">
-              <a onclick="comments()"><img id="comments" src="images/comments.svg" alt="Comments" /><text id="contComments">3</text></a>
-              <a onclick="refresh()"><img id="refresh" src="images/refresh.svg" alt="Refresh" /><text id="contRefresh">4</text></a>
-              <a onclick="like()"><img id="like" src="images/heart.svg" alt="Like" /> <text id='likeNumbers'>5</text></a>
+              <!-- alterado o id para classe para que o novo li item[0] receba innetText '0' -->
+              <a onclick="comments()"><img id="comments" src="./images/comments.svg" alt="Comments" />
+                <text class="contComments">3</text>
+              </a>
+              <a onclick="refresh()"><img id="refresh" src="./images/refresh.svg" alt="Refresh" />
+                <text class="contRefresh">4</text>
+              </a>
+              <a onclick="like()"><img id="like" src="./images/heart.svg" alt="Like" />
+                <text class="likeNumbers">5</text>
+              </a>
             </div>
           </div>
         </li>
-        <li>
-          <img src="images/avatar.png" alt="Avatar" />
+        <li class="tweetItem">
+          <img src="./images/avatar.png" alt="Avatar" />
           <div class="info">
             <strong>
               Javascript web
@@ -120,14 +134,14 @@
               text ever since the 1500
             </p>
             <div class="actions">
-              <a href=""><img src="images/comments.svg" alt="Comments" />3</a>
-              <a href=""><img src="images/refresh.svg" alt="Refresh" />4</a>
-              <a href=""><img src="images/heart.svg" alt="Like" />5</a>
+              <a><img id="comments" src="./images/comments.svg" alt="Comments" />3</a>
+              <a><img id="refresh" src="./images/refresh.svg" alt="Refresh" />4</a>
+              <a><img id="like" src="./images/heart.svg" alt="Like" />5</a>
             </div>
           </div>
         </li>
-        <li>
-          <img src="images/avatar.png" alt="Avatar" />
+        <li class="tweetItem">
+          <img src="./images/avatar.png" alt="Avatar" />
           <div class="info">
             <strong>
               Javascript web
@@ -139,9 +153,9 @@
               text ever since the 1500
             </p>
             <div class="actions">
-              <a href=""><img src="images/comments.svg" alt="Comments" />3</a>
-              <a href=""><img src="images/refresh.svg" alt="Refresh" />4</a>
-              <a href=""><img src="images/heart.svg" alt="Like" />5</a>
+              <a><img id="comments" src="./images/comments.svg" alt="Comments" />3</a>
+              <a><img id="refresh" src="./images/refresh.svg" alt="Refresh" />4</a>
+              <a><img id="like" src="./images/heart.svg" alt="Like" />5</a>
             </div>
           </div>
         </li>
@@ -157,18 +171,19 @@
         <ul>
           <li id="firstProfile">
             <section class="profile">
-              <img src="images/avatar.png" alt="Avatar" />
+              <img src="./images/avatar.png" alt="Avatar" />
               <div class="info">
                 <strong>Javascript Web
                   <span>@javascriptWeb</span>
                 </strong>
-                <button onclick="goFollow()">Follow</button>
+                <button onclick="goFollowSug()">Follow</button>
               </div>
             </section>
+            <a onclick="cleanSug()">x</a>
           </li>
           <li>
             <section class="profile">
-              <img src="images/avatar.png" alt="Avatar" />
+              <img src="./images/avatar.png" alt="Avatar" />
               <div class="info">
                 <strong>Javascript Web
                   <span>@javascriptWeb</span>
@@ -176,10 +191,11 @@
                 <button>Follow</button>
               </div>
             </section>
+            <a href="">x</a>
           </li>
           <li>
             <section class="profile">
-              <img src="images/avatar.png" alt="Avatar" />
+              <img src="./images/avatar.png" alt="Avatar" />
               <div class="info">
                 <strong>Javascript Web
                   <span>@javascriptWeb</span>
@@ -187,6 +203,7 @@
                 <button>Follow</button>
               </div>
             </section>
+            <a href="">x</a>
           </li>
         </ul>
       </div>
@@ -195,7 +212,7 @@
     </aside>
   </section>
 
-  <script type="text/javascript" src="script.js"></script>
+  <script text="text/javascript" src="script.js"></script>
 </body>
 
 </html>
